loops , for, comprehensions

--- a/foundation/Foundation1.ipynb
+++ b/foundation/Foundation1.ipynb
@@ -1008,7 +1008,9 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "moreones = ones + ones"
@@ -1831,12 +1833,6 @@
     "pre = \"Isac\"\n",
     "post = \"Asimove\"\n",
     "name = pre post\n",
-    "```\n",
-    "- What might be the output of this?\n",
-    "```\n",
-    "sentence = \"Do geese see God?\"\n",
-    "sentence[100]\n",
-    "sentence[3:100]\n",
     "```\n",
     "- What will be output of following sequence of commands in python interpreter? observe the behavior of special variable **_**\n",
     "```\n",
@@ -3591,7 +3587,9 @@
   {
    "cell_type": "code",
    "execution_count": 191,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "os.mkdir(\"/tmp/test1\")"
@@ -3880,7 +3878,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Finding help!**\n",
+    "### Finding help! ###\n",
     "inside interpreter you can use help function to get help of function or module."
    ]
   },
@@ -4356,7 +4354,7 @@
    "metadata": {},
    "source": [
     "### Do it yourself ###\n",
-    "- Write a python script square.py that takes a number as commandline argument and prints square ofthat number.\n",
+    "- Write a python script square.py that takes a number as commandline argument and prints square of that number.\n",
     "- Write a python script add.py to two numbers given as commandline arguments.\n",
     "- Write a python script echo.py, equivalent of unix command echo which echoes the text.\n",
     "- Find out value of variable `__name__` when module is imported."
