more on functions, testing and string formatting

--- a/foundation/Foundation1.ipynb
+++ b/foundation/Foundation1.ipynb
@@ -2295,27 +2295,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'twotimes' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-122-9e2b80340e03>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtwotimes\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'twotimes' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "twotimes"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 123,
    "metadata": {
     "collapsed": true
@@ -2515,76 +2494,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "polynomial = lambda x: x**2 + x + 1"
+    "add = lambda x,y: x+y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "31"
+       "9"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "polynomial(5)"
+    "add(5,4)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def squared_polynomial():\n",
-    "    return lambda x: polynomial(x) * polynomial(x)"
+    "def make_adder(y):\n",
+    "    return lambda x:x+y "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "f = squared_polynomial()"
+    "add2 = make_adder(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "961"
+       "7"
       ]
      },
-     "execution_count": 138,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "f(5)"
+    "add2(5)"
    ]
   },
   {
@@ -4402,13 +4381,152 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### Environment ###\n",
+    "A critical aspect of a programming language is the means it provides for using names to refer to computational objects. If a value has been given a name, we say that the name binds to the value.\n",
+    "\n",
+    "In Python, we can establish new bindings using the assignment statement, which contains a name to the left of = and a value to the right\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "radius = 2.0"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "radius"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "Obviously python stores these names, values and bindings somewhere! that some place is some kind of memory from where python can look up corresponding names and there bound values as per need. This memory is called environment. What can we bind to names? anything from values(integers, floats, strings etc.), objects to functions, modules etc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math     # new variable called math ..now bound to module math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<module 'math' (built-in)>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(math)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import math as m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<module 'math' (built-in)>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(m)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Observe following code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "balance =  50000\n",
+      "cash =  49000\n"
+     ]
+    }
+   ],
+   "source": [
+    "cash = 10000\n",
+    "balance = 50000\n",
+    "\n",
+    "def withdraw(balance, amount):\n",
+    "    balance = balance - amount\n",
+    "    return balance\n",
+    "\n",
+    "cash = withdraw(balance, 1000)\n",
+    "\n",
+    "print(\"balance = \", balance)\n",
+    "print(\"cash = \", cash)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "variables defined in a function including those from argument are local variables. Any change in those variables is available only locally i.e. in the function itself."
+   ]
   },
   {
    "cell_type": "code",
